FIX: header arrow overlap

--- a/src/main/webapp/javascript/tablesorter/themes/blue/style.css
+++ b/src/main/webapp/javascript/tablesorter/themes/blue/style.css
@@ -18,6 +18,7 @@ table.tablesorter thead tr .header {
 	background-repeat: no-repeat;
 	background-position: center right;
 	cursor: pointer;
+	padding-right: 15px;
 }
 table.tablesorter tbody td {
 	color: #3D3D3D;
